			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.02o: *********************************

BUG: (06/10/05, GVG) Overlap not checked correctly when node was in a subcell (Bug #352)
FIX: TSMCRules.getRule() was not getting the correct min size for default case. This was probably introduced
while introducing length to wide condition for TSMC90.

BUG: (06/10/05, GVG) Checking geometries against themselves under certain condition (discovered while
fixing Bug #352)
FIX: In Quick.badBoxInArea(), skip case when they are in the same cell.

IMP: (06/10/05, GVG) Improving error message when you try to reopen a library (Bug #347)

IMP: (06/10/05, GVG) New values for DRC Rules 30.1, 30.2 and 30.4 in MoCMOS.
Old values: 4,4,8. New Values: 5,5,10

BUG: (06/09/05, DN) Network.getExports() returns no Exports for a Network (Bug #351)
FIX: Add loop for busses.

IMP: (06/07/05, SMR) Added controls to "Color preferences" to control the
     waveform window colors.

BUG: (06/06/05, SMR) PSpice output cannot handle "gnd" signal or "@" in names.
FIX: Use "0" for ground, convert "@" characters.

IMP: (06/07/05, DN) Refactoring: joined together ArcProto and PrimitiveArc
     classes.

BUG: (06/06/05, SMR) Selecting a variable in the "Attribute Properties" dialog
     may change it.
FIX: In Attributes.showSelectedAttribute(), set "loading" before changing the
     "value" field.

IMP: (06/05/05, DN) Persistent data of NodeInst is moved to ImmutableNodeInst
     class.

BUG: (06/05/05, DN) Sometimes EPoint has coordiante -0 (HotSpot optimezer).
FIX: Compare coordiante with "-0.0" instead of "0" in EPoint.

IMP: (06/05/05, DN) FlagSet class is no longer used and it is removed.

BUG: (06/05/05, DN) Grid alignement option "0" should disable alignemnt.
FIX: In EditWindow fix "gridAlign" methods.

IMP: (06/05/05, DN) JELIB output writes now "P" bit ("isParam")from database
